--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ language:               ""
 title:                  "Life Flower &ndash; Organic Hemp-Derived CBD Products"
 description:            "Small batch Hemp-Derived CBD, CBD Isolate, and Full-Spectrum CBD Oil products made from natural, ethically sourced ingredients with therapeutic grade essential oils and absolutely no artificial fragrances, chemicals, or preservatives."
 google-verification:    ""
-instagram-url:          "http://www.instagram.com/lifeflowercare"
+instagram-url:          "https://www.instagram.com/lifeflowercare"
 
 # Handling Reading
 include:
