Update for Wholesale info

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,6 +7,6 @@ location:
   fax:
   address_line_1:
   address_line_2:
-  email: info@lifeflowercare.com
-send_contact_to: info@lifeflowercare.com
+  email: wholesale@lifeflowercare.com
+send_contact_to: wholesale@lifeflowercare.com
 ordering_disabled_notice: Online ordering is currently disabled
