--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 url:                    "lifeflowercare.com"
 language:               ""
-title:                  "Life Flower &ndash; Organic Hemp-Derived CBD Products"
+title:                  "Life Flower Wholesale &ndash; Organic Hemp-Derived CBD Products"
 description:            "Small batch Hemp-Derived CBD, CBD Isolate, and Full-Spectrum CBD Oil products made from natural, ethically sourced ingredients with therapeutic grade essential oils and absolutely no artificial fragrances, chemicals, or preservatives."
 google-verification:    ""
 instagram-url:          "https://www.instagram.com/lifeflowercare"
