update config yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-url:                    "lifeflowercare.com"
+url:                    "https://wholesale.lifeflowercare.com"
 language:               ""
 title:                  "Life Flower Wholesale &ndash; Organic Hemp-Derived CBD Products"
 description:            "Small batch Hemp-Derived CBD, CBD Isolate, and Full-Spectrum CBD Oil products made from natural, ethically sourced ingredients with therapeutic grade essential oils and absolutely no artificial fragrances, chemicals, or preservatives."
